--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ spring.datasource.url=jdbc:h2:mem:petdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.jpa.hibernate.ddl-auto=update
 
-#logging.level.root=error
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.root=INFO
